--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -21,13 +21,23 @@
 }
 
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
+    background: linear-gradient(#222831, #F7F7F7);
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -38,10 +48,6 @@ h1 {
 h2, h3 {
     font-family: 'Roboto', sans-serif;
     font-weight: 600; /* Semi-bold */
-}
-
-html{
-    scroll-behavior: smooth;
 }
 
 /*Page's CSS Starts from here */
